仿花束直播点赞效果

--- a/app/src/main/res/layout/activity_give_like.xml
+++ b/app/src/main/res/layout/activity_give_like.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/black"
+    android:gravity="center_horizontal"
     tools:context=".givelike.GiveLikeActivity">
 
     <com.yszln.advancedui.givelike.huashu.HuaShuGiveLikeView
         android:id="@+id/likeView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="200dp"
+        android:layout_height="400dp" />
+    <ImageView
+        android:id="@+id/likeBtn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@mipmap/heart2"/>
+</LinearLayout>
