--- a/app/src/main/res/layout/activity_give_like.xml
+++ b/app/src/main/res/layout/activity_give_like.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical"
     android:background="@color/black"
     android:gravity="center_horizontal"
-    tools:context=".givelike.GiveLikeActivity">
+    tools:context=".view.givelike.GiveLikeActivity">
 
-    <com.yszln.advancedui.givelike.huashu.HuaShuGiveLikeView
+    <com.yszln.advancedui.view.givelike.huashu.HuaShuGiveLikeView
         android:id="@+id/likeView"
         android:layout_width="200dp"
         android:layout_height="400dp" />
