--- a/app/src/main/res/layout/activity_paint.xml
+++ b/app/src/main/res/layout/activity_paint.xml
@@ -14,6 +14,7 @@
         android:src="@mipmap/content" />
 
     <com.yszln.advancedui.splash.SplashView
+        android:id="@+id/splashView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
