--- a/app/src/main/res/layout/act_order_shaft.xml
+++ b/app/src/main/res/layout/act_order_shaft.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.yszln.advancedui.view.ordershaft.ScheduleView
+    <com.yszln.advancedui.view.schedule.ScheduleView
         android:id="@+id/scheduleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
