--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:background="@color/white"
+    android:layout_height="wrap_content">
 
-    <Button
+    <TextView
         android:id="@+id/title_black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="退出" />
+        android:textColor="@color/black"
+        android:paddingVertical="10dp"
+        android:text="返回" />
 </LinearLayout>
