--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/white"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -16,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="11sp"
+        android:textColor="@color/black"
         android:lines="2"
         android:text="TextView" />
 </LinearLayout>
