--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.AdvancedUIKt" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
+        <item name="android:windowBackground">@color/white</item>
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -9,6 +10,7 @@
         <item name="colorSecondary">@color/teel_200</item>
         <item name="colorSecondaryVariant">@color/teel_700</item>
         <item name="colorOnSecondary">@color/gray5</item>
+        <item name="android:textColor">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
